s/Starter Kit/Boilerplate

--- a/local.html
+++ b/local.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Sencha Touch Starter Kit</title>
+    <title>Sencha Touch Boilerplate</title>
     <link rel="stylesheet" href="touch/resources/css/sencha-touch.css" type="text/css">
     <link rel="stylesheet" href="app.css" type="text/css">
 
