--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Sencha Touch Starter Kit</title>
+    <title>Sencha Touch Boilerplate</title>
     <link rel="stylesheet" href="http://dev.sencha.com/deploy/sencha-touch-2-pr3/resources/css/sencha-touch.css" type="text/css">
     <link rel="stylesheet" href="app.css" type="text/css">
 
