--- a/hosted.html
+++ b/hosted.html
@@ -5,6 +5,12 @@
     <link rel="stylesheet" href="http://dev.sencha.com/deploy/sencha-touch-2-b2/resources/css/sencha-touch.css" type="text/css">
 
     <script type="text/javascript" src="http://dev.sencha.com/deploy/sencha-touch-2-b2/sencha-touch-debug.js"></script>
+    <script type="text/javascript" charset="utf-8">
+      Ext.Loader.setConfig({
+          enabled: true,
+          paths: { 'Ext': 'http://dev.sencha.com/deploy/sencha-touch-2-b2/src' }
+      });
+    </script>
     <script type="text/javascript" src="app.js"></script>
 </head>
 <body></body>
