--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="stylesheet" href="app.css" type="text/css">
 
     <script type="text/javascript" src="touch/sencha-touch-debug.js"></script>
+    <script type="text/javascript" charset="utf-8">
+      Ext.Loader.setConfig({
+          enabled: true,
+          paths: { 'Ext': 'touch/src' }
+      });
+    </script>
     <script type="text/javascript" src="app.js"></script>
 </head>
 <body></body>
